<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:background="@drawable/shadow"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="@dimen/_60sdp"
            app:srcCompat="@drawable/ic_warning"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="@dimen/_60sdp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rules_of_quiz"
            android:textColor="#000"
            android:textSize="@dimen/_15sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qiuze_rule1"
            android:textColor="#FCA50F"
            android:textSize="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quize_rule2"
            android:textColor="#FCA50F"
            android:textSize="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            >

            <Button
                android:id="@+id/btnBatil"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/_15sdp"
                android:gravity="center"
                android:background="#E6E6E6"
                android:textColor="#000"
                />

            <Button
                android:id="@+id/btnSuru"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/getstarted"
                android:textSize="@dimen/_15sdp"
                android:background="#C9302C"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="#fff"
                />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>