<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/subhanallahbg"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >


        <LinearLayout
            android:id="@+id/linAlQran"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:orientation="vertical"
            android:background="@drawable/shadow"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/alquran"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alquran"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linAHadith"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"

            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/alhadith"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alhadith"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linSantirbani"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/shantir_bani"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/santirbani"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/linBlog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/blogger"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linMasael"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"

            >

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/ic_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masayel"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linAskQues"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/question"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prosnokorun"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/linQuesAns"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/ic_ask"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prosneruttor"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linTodayQues"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"

            >

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/ic_suggestion"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajkerprosno"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linQuize"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_95sdp"
            android:background="@drawable/shadow"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/quiz"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quize"
                android:textSize="@dimen/_10sdp"
                android:textColor="#000"
                android:gravity="center"
                />


        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>